fix: main z-index

--- a/app/index.scss
+++ b/app/index.scss
@@ -62,7 +62,7 @@
 
   main {
     position: relative;
-    z-index: 10;
+    z-index: 1;
   }
 
   .h1 {
